[package]
name = "rcm-com"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37.0", features = ["net", "rt-multi-thread", "macros", "io-util"] }
thiserror = "2"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
] }

[[bin]]
path = "src/main.rs"
name = "rcm"